--- a/index.html
+++ b/index.html
@@ -1,1 +1,166 @@
+<!---------------------------------------------
+- COSC 231 Project1
+- Farha Zindah
+- 9/15/2021
+-
+- Design and implement an HTML document that 
+- displays your personal webpage
+---------------------------------------------->
+	
+<!DOCTYPE html>
+<html lang="en-US">
+	<head>
+		<title>Farha's Page</title>
+		<link rel="stylesheet" href="Project1.css"/>
+	</head>
 
+	<body>
+		<div class="heading">
+
+			<h1 class="title">farha zindah</h1>
+
+			<h5 class="contents">
+			<a href="#contact">contact</a>
+			<a href="#background">background</a>
+			<a href="#education">education</a>
+			<a href="#hobbies">hobbies</a>
+			</h5>
+
+			<br/></br></br><br/>
+			<h3>221b Baker St,</h3>
+			<h3>London NW1 6XE</h3>
+			<h3>United Kingdom</h3>
+		</div>
+
+		<!-- Contact Information-->
+
+		<h1 id="contact">contact me</h1>
+		<p id="number">605-475-6961</p>
+		<br><br>
+		
+		<!-- Background Information-->
+
+		<table id="background">
+
+			<tr>
+				<th id="profile">
+
+					<img src="profilePic.png" 
+					border="0px" 
+					width="90%"
+					style="display-block"/>
+
+					<a href="https://www.vecteezy.com/free-
+					vector/human">Human Vectors by Vecteezy</a>
+				</th>
+
+				<th class="backgroundInfo">
+					
+					<h1 id="backgroundInfo">background</h1>
+
+					<p class="infoText"> 
+					Hi, my name's Farha! I've lived in Ann 
+					Arbor, MI most of my life. A few things I've 
+					been passionate about since I was a kid include 
+					programming, computers, art, and any dessert with 
+					chocolate involved.
+					</p>
+				</th>
+			</tr>
+		</table>
+
+		<!-- Education -->
+
+		<div class="education">
+
+			<h1 id="education">education</h1>
+			<h1 style="
+			font-size:25px;
+			line-height: 150%;
+			color:#DCDCDC">
+
+			I'm a sophomore at Eastern Michigan University, majoring 
+			in Computer Science. Before that, I dual enrolled for a 
+			couple semesters at Washtenaw Community College. I've been 
+			doing small programming projects since middle school, and 
+			entered in a FIRST robotics competition in high school, 
+			where my team programmed and built a robot to lift itself up,
+			shoot baskets, and more.
+			</h1>
+		</div>
+
+		<!-- Hobbies -->
+
+		<h1 id="hobbies-title">hobbies</h1>
+		<table id="hobbies">
+
+			<tr>
+				<th>
+					<ul type="circle">
+						<li>painting</li>
+					</ul>
+				</th>
+				<th>
+					<ul type="circle">
+						<li>hiking</li>
+					</ul>
+				</th>
+				<th>
+					<ul type="circle">
+						<li>kayaking</li>
+					</ul>
+				</th>
+				<th>
+					<ul type="circle">
+						<li>sewing</li>
+					</ul>
+				</th>
+				<th>
+					<ul type="circle">
+						<li>jiu jitsu</li>
+					</ul>
+				</th>
+			</tr>
+		</table>
+
+		<!-- Interesting Links-->
+
+		<table id="links">
+			<tr>
+				<th id="links-title" colspan="3">
+					<h1>interesting links</h1>
+				</th>
+			<tr>
+				<th>
+					<a href="https://martialartlife.com/">
+					<img src="martial_arts.png"/></a>
+
+					<a href="https://www.seekpng.com/ipng/u2w7q8a9o
+					0a9t4y3_karate-at-getdrawings-com-free-for-personal
+					silhueta/" 
+					target="_blank"><br><br>Silhueta Kung Fu @seekpng.com</a>
+				</th>
+
+				<th>
+					<a href="https://www.metmuseum.org/art/collection">
+					<img src="art.jpg"></a>
+
+					<a href="https://pxhere.com/en/photo/1621504?
+					utm_content=clipUser&utm_medium=referral&utm_source=pxhere
+					"><br><br>from PxHere</a>
+					
+				</th>
+
+				<th>
+					<a href="https://www.a2gov.org/departments/Parks-
+					Recreation/parks-places/gallup/pages/default.aspx">
+					<img src="kayaking.jpg"/></a>
+
+					<a href="https://pxhere.com/en/photo/1621504?
+					utm_content=clipUser&utm_medium=referral&utm_source=pxhere
+					"><br><br>from PxHeree</a>
+				</th>
+			</tr>
+		</table>
+	</body>	
+</html>
