--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <html lang="en-US">
 	<head>
 		<title>Farha's Page</title>
-		<link rel="stylesheet" href="Project1.css"/>
+		<link type="text/css" rel="stylesheet" href="Project1.css" />
 	</head>
 
 	<body>
