--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<tr>
 				<th id="profile">
 
-					<img src="profilePic.png" 
+					<img src="assets/profilePic.png" 
 					border="0px" 
 					width="90%"
 					style="display-block"/>
