--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			<tr>
 				<th>
 					<a href="https://martialartlife.com/">
-					<img src="martial_arts.png"/></a>
+					<img src="assets/martial_arts.png"/></a>
 
 					<a href="https://www.seekpng.com/ipng/u2w7q8a9o
 					0a9t4y3_karate-at-getdrawings-com-free-for-personal
@@ -143,7 +143,7 @@
 
 				<th>
 					<a href="https://www.metmuseum.org/art/collection">
-					<img src="art.jpg"></a>
+					<img src="assets/art.jpg"></a>
 
 					<a href="https://pxhere.com/en/photo/1621504?
 					utm_content=clipUser&utm_medium=referral&utm_source=pxhere
@@ -154,7 +154,7 @@
 				<th>
 					<a href="https://www.a2gov.org/departments/Parks-
 					Recreation/parks-places/gallup/pages/default.aspx">
-					<img src="kayaking.jpg"/></a>
+					<img src="assets/kayaking.jpg"/></a>
 
 					<a href="https://pxhere.com/en/photo/1621504?
 					utm_content=clipUser&utm_medium=referral&utm_source=pxhere
