--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
 			<tr>
 				<th id="profile">
 
-					<img src="assets/profilePic.png" 
-					border="0px"  
-					width="90%"
-					style="display-block"/>
-
+					<img src="assets/profilePic.png" />
 					<a href="https://www.vecteezy.com/free-
 					vector/human">Human Vectors by Vecteezy</a>
 				</th>
@@ -74,11 +70,7 @@
 		<div class="education">
 
 			<h1 id="education">education</h1>
-			<h1 style="
-			font-size:25px;
-			line-height: 150%;
-			color:#DCDCDC">
-
+			<h1 id="edu-info">
 			I'm a sophomore at Eastern Michigan University, majoring 
 			in Computer Science. Before that, I dual enrolled for a 
 			couple semesters at Washtenaw Community College. I've been 
@@ -158,7 +150,7 @@
 
 					<a href="https://pxhere.com/en/photo/1621504?
 					utm_content=clipUser&utm_medium=referral&utm_source=pxhere
-					"><br><br>from PxHeree</a>
+					"><br><br>from PxHere</a>
 				</th>
 			</tr>
 		</table>
