--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 			</h5>
 
 			<br/></br></br><br/>
-			<h3>221b Baker St,</h3>
-			<h3>London NW1 6XE</h3>
-			<h3>United Kingdom</h3>
+			<h3>900 Oakwood St,</h3>
+			<h3>Ypsilanti, MI</h3>
+			<h3>48108</h3>
 		</div>
 
 		<!-- Contact Information-->
 
 		<h1 id="contact">contact me</h1>
-		<p id="number">605-475-6961</p>
+		<p id="number">734-679-8636</p>
 		<br><br>
 		
 		<!-- Background Information-->
@@ -58,8 +58,9 @@
 					Hi, my name's Farha! I've lived in Ann 
 					Arbor, MI most of my life. A few things I've 
 					been passionate about since I was a kid include 
-					programming, computers, art, and any dessert with 
-					chocolate involved.
+					programming, marital arts, art, and any dessert with 
+					chocolate involved. I'm also currently part of the Women 
+					in Computer Science organization at EMU.
 					</p>
 				</th>
 			</tr>
@@ -77,7 +78,9 @@
 			doing small programming projects since middle school, and 
 			entered in a FIRST robotics competition in high school, 
 			where my team programmed and built a robot to lift itself up,
-			shoot baskets, and more.
+			shoot baskets, and more. Since starting college, I've taken
+			many relevant courses such as Internet-Based Computing,
+			Algorithms and Data Structures, and Programming Languages
 			</h1>
 		</div>
 
