--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
 
 	<body>
 		<div class="heading">
+			<div class="slide-in">
+				<h1 class="title">farha zindah</h1>
 
-			<h1 class="title">farha zindah</h1>
-
-			<h5 class="contents">
-			<a href="#contact">contact</a>
-			<a href="#background">background</a>
-			<a href="#education">education</a>
-			<a href="#hobbies">hobbies</a>
-			</h5>
-
-			<br/></br></br><br/>
-			<h3>900 Oakwood St,</h3>
-			<h3>Ypsilanti, MI</h3>
-			<h3>48108</h3>
+				<h5 class="contents">
+				<a href="#contact">contact</a>
+				<a href="#background">background</a>
+				<a href="#education">education</a>
+				<a href="#hobbies">hobbies</a>
+				</h5>
+				
+				<br/></br></br><br/>
+				<h3>900 Oakwood St,</h3>
+				<h3>Ypsilanti, MI</h3>
+				<h3>48108</h3>
+			</div>
+			<h1 class="heading-text fade-in">Junior computer science student at 
+			EMU<br/>Software and Web Development</h1>
 		</div>
 
 		<!-- Contact Information-->
@@ -40,7 +43,7 @@
 		
 		<!-- Background Information-->
 
-		<table id="background">
+		<table id="background" class="tag">
 
 			<tr>
 				<th id="profile">
@@ -68,9 +71,9 @@
 
 		<!-- Education -->
 
-		<div class="education">
+		<div class="education tag" id="education">
 
-			<h1 id="education">education</h1>
+			<h1>education</h1>
 			<h1 id="edu-info">
 			I'm a sophomore at Eastern Michigan University, majoring 
 			in Computer Science. Before that, I dual enrolled for a 
@@ -86,33 +89,33 @@
 
 		<!-- Hobbies -->
 
-		<h1 id="hobbies-title">hobbies</h1>
+		<h1 id="hobbies-title">skills</h1>
 		<table id="hobbies">
 
 			<tr>
 				<th>
 					<ul type="circle">
-						<li>painting</li>
+						<li>Java</li>
 					</ul>
 				</th>
 				<th>
 					<ul type="circle">
-						<li>hiking</li>
+						<li>JavaScript</li>
 					</ul>
 				</th>
 				<th>
 					<ul type="circle">
-						<li>kayaking</li>
+						<li>JavaFX</li>
 					</ul>
 				</th>
 				<th>
 					<ul type="circle">
-						<li>sewing</li>
+						<li>HTML</li>
 					</ul>
 				</th>
 				<th>
 					<ul type="circle">
-						<li>jiu jitsu</li>
+						<li>CSS</li>
 					</ul>
 				</th>
 			</tr>
@@ -120,10 +123,10 @@
 
 		<!-- Interesting Links-->
 
-		<table id="links">
+		<table id="links" class="tag">
 			<tr>
 				<th id="links-title" colspan="3">
-					<h1>interesting links</h1>
+					<h1>Projects</h1>
 				</th>
 			<tr>
 				<th>
@@ -133,7 +136,7 @@
 					<a href="https://www.seekpng.com/ipng/u2w7q8a9o
 					0a9t4y3_karate-at-getdrawings-com-free-for-personal
 					silhueta/" 
-					target="_blank"><br><br>Silhueta Kung Fu @seekpng.com</a>
+					target="_blank"></a>
 				</th>
 
 				<th>
@@ -142,7 +145,7 @@
 
 					<a href="https://pxhere.com/en/photo/1621504?
 					utm_content=clipUser&utm_medium=referral&utm_source=pxhere
-					"><br><br>from PxHere</a>
+					"></a>
 					
 				</th>
 
@@ -153,7 +156,7 @@
 
 					<a href="https://pxhere.com/en/photo/1621504?
 					utm_content=clipUser&utm_medium=referral&utm_source=pxhere
-					"><br><br>from PxHere</a>
+					"></a>
 				</th>
 			</tr>
 		</table>
