--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<head>
 		<title>Farha's Page</title>
 		<link type="text/css" rel="stylesheet" href="Project1.css" />
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="/Project1.js"></script>
 	</head>
 
 	<body>
