--- a/index.html
+++ b/index.html
@@ -132,13 +132,8 @@
 				</th>
 			<tr>
 				<th>
-					<a href="https://martialartlife.com/">
-					<img src="assets/martial_arts.png"/></a>
-
-					<a href="https://www.seekpng.com/ipng/u2w7q8a9o
-					0a9t4y3_karate-at-getdrawings-com-free-for-personal
-					silhueta/" 
-					target="_blank"></a>
+					<a href="https://github.com/fzindah/bst-student-records.git">
+					<img src="Java1.PNG"/></a>
 				</th>
 
 				<th>
