--- a/index.html
+++ b/index.html
@@ -133,16 +133,15 @@
 			<tr>
 				<th>
 					<a href="https://github.com/fzindah/bst-student-records.git">
-					<img src="Java1.PNG"/></a>
+					<img src="assets/Java1.PNG"/></a>
+					<p>Java database project</p>
 				</th>
 
 				<th>
-					<a href="https://www.metmuseum.org/art/collection">
-					<img src="assets/art.jpg"></a>
+					<a href="https://github.com/fzindah/314-Final-Project-FZindah.git">
+					<img src="assets/Java2.PNG"></a>
 
-					<a href="https://pxhere.com/en/photo/1621504?
-					utm_content=clipUser&utm_medium=referral&utm_source=pxhere
-					"></a>
+					<p>Java Permutations and Combinations, discrete math</p>
 					
 				</th>
 
