--- a/index.html
+++ b/index.html
@@ -146,13 +146,10 @@
 				</th>
 
 				<th>
-					<a href="https://www.a2gov.org/departments/Parks-
-					Recreation/parks-places/gallup/pages/default.aspx">
-					<img src="assets/kayaking.jpg"/></a>
+					<a href="https://github.com/fzindah/fzindah.github.io.git">
+					<img src="assets/website.PNG"/></a>
 
-					<a href="https://pxhere.com/en/photo/1621504?
-					utm_content=clipUser&utm_medium=referral&utm_source=pxhere
-					"></a>
+					<p>Website HTML, CSS, JavaScript</p>
 				</th>
 			</tr>
 		</table>
