--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				<a href="#contact">contact</a>
 				<a href="#background">background</a>
 				<a href="#education">education</a>
-				<a href="#hobbies">hobbies</a>
+				<a href="#hobbies">skills</a>
+				<a href="#projects">projects</a>
 				</h5>
 				
 				<br/></br></br><br/>
@@ -125,7 +126,7 @@
 
 		<!-- Interesting Links-->
 
-		<table id="links" class="tag">
+		<table id="links projects" class="tag">
 			<tr>
 				<th id="links-title" colspan="3">
 					<h1>Projects</h1>
