--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 				<a href="#background">background</a>
 				<a href="#education">education</a>
 				<a href="#hobbies">skills</a>
-				<a href="#projects">projects</a>
 				</h5>
 				
 				<br/></br></br><br/>
@@ -126,7 +125,7 @@
 
 		<!-- Interesting Links-->
 
-		<table id="links projects" class="tag">
+		<table id="links" class="tag">
 			<tr>
 				<th id="links-title" colspan="3">
 					<h1>Projects</h1>
