--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 
 	<body>
-		<div class="heading">
+		<header class="heading">
 			<div class="slide-in">
 				<h1 class="title">farha zindah</h1>
 
@@ -35,7 +35,7 @@
 			</div>
 			<h1 class="heading-text fade-in">Junior computer science student at 
 			EMU<br/>Software and Web Development</h1>
-		</div>
+		</header>
 
 		<!-- Contact Information-->
 
