--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
 		<!-- Contact Information-->
 
 		<h1 id="contact">contact me</h1>
-		<p id="number">734-679-8636</p>
-		<br><br>
+		<table>
+			<tr>
+				<td><img src="assets/call.png" alt="phone icon" />
+				<td><p id="number">734-679-8636</p></td>
+			</tr>
+			<tr>
+				<td><img src="assets/email.png" alt="email icon" />
+				<td><p id="number">fzindah@emich.edu</p></td>
+			</tr>
+		</table>
 		
 		<!-- Background Information-->
 
