--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<!-- Contact Information-->
 
 		<h1 id="contact">contact me</h1>
-		<table>
+		<table id="contact-text">
 			<tr>
 				<td><img src="assets/call.png" alt="phone icon" />
 				<td><p id="number">734-679-8636</p></td>
