--- a/index.html
+++ b/index.html
@@ -161,5 +161,11 @@
 				</th>
 			</tr>
 		</table>
+		
+		<div class="accounts">
+			<p>email: fzindah@emich.edu</p>
+			<p>phone: (734) 679-8636</p>
+			<a href="https://www.linkedin.com/in/farha-zindah-99409022a/"><p>LinkedIn: Farha Zindah<p></a>
+		</div>
 	</body>	
 </html>
