--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				
 				<br/></br></br><br/>
 				<h3>900 Oakwood St,</h3>
-				<h3>Ypsilanti, MI</h3>
+				<h3>Ann Arbor, MI</h3>
 				<h3>48108</h3>
 			</div>
 			<h1 class="heading-text fade-in">Junior computer science student at 
@@ -39,7 +39,7 @@
 
 		<!-- Contact Information-->
 
-		<h1 id="contact">contact me</h1>
+		<h1 id="contact"></h1>
 		<table id="contact-text">
 			<tr>
 				<td><img src="assets/call.png" alt="phone icon" />
