--- a/index.html
+++ b/index.html
@@ -131,36 +131,31 @@
 			</tr>
 		</table>
 
-		<!-- Interesting Links-->
+		<!-- Programming project Links-->
+		
+		<div class="projects">
+			
+			<h1>Projects</h1>
+			<div class="slideshow">
+            			<a href="https://github.com/fzindah/bst-student-records.git">
+                			<div class="show pic1 fade">
+                			</div>
+                			<p>Java database project</p>
+            			</a>
 
-		<table id="links" class="tag">
-			<tr>
-				<th id="links-title" colspan="3">
-					<h1>Projects</h1>
-				</th>
-			<tr>
-				<th>
-					<a href="https://github.com/fzindah/bst-student-records.git">
-					<img src="assets/Java1.PNG"/></a>
-					<p>Java database project</p>
-				</th>
-
-				<th>
-					<a href="https://github.com/fzindah/314-Final-Project-FZindah.git">
-					<img src="assets/Java2.PNG"></a>
-
+				<a href="https://github.com/fzindah/314-Final-Project-FZindah.git">
+					<div class="show pic2 fade">
+					</div>
 					<p>Java Permutations and Combinations, discrete math</p>
-					
-				</th>
+				</a>
 
-				<th>
-					<a href="https://github.com/fzindah/fzindah.github.io.git">
-					<img src="assets/website.PNG"/></a>
-
-					<p>Website HTML, CSS, JavaScript</p>
-				</th>
-			</tr>
-		</table>
+            			<a href="https://github.com/fzindah/fzindah.github.io.git">
+			    		<div class="show pic3 fade">
+               				</div>
+            				<p>Website HTML, CSS, JavaScript</p>
+            			</a>
+			</div>
+		</div>
 		
 		<div class="accounts">
 			<p>email: fzindah@emich.edu</p>
