--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 		<!-- Programming project Links-->
 		
-		<div class="projects">
+		<div class="projects tag">
 			
 			<h1>Projects</h1>
 			<div class="slideshow">
