--- a/SoK.html
+++ b/SoK.html
@@ -24,7 +24,7 @@
 
 		<!-- Main -->
 			<div id="main">
-
+				<a href="index.html"><button>Home</button></a>
 				<!-- One -->
 					<section id="one">
 						<header class="major">
