--- a/SoK.html
+++ b/SoK.html
@@ -24,8 +24,8 @@
 
 		<!-- Main -->
 			<div id="main">
-				<a href="index.html"><button>Home</button></a>
-				<!-- One -->
+<!-- 				<a href="index.html"><button>Home</button></a>
+				<!-- One --> -->
 					<section id="one">
 						<header class="major">
 							<h2>Settlers Off Katan</h2>
