--- a/SoK.html
+++ b/SoK.html
@@ -46,7 +46,10 @@
 
 				<!-- Two -->
 					<section id="two">
-                        <img style="width:100%;"src="images/SoK.PNG"/>
+						<h1>Settlers off Katan Introduction</h1>
+						<iframe width="640" height="360"
+						src="https://www.youtube.com/embed/N6VQ_sd2xvQ">
+						</iframe> 
 
 					</section>
 
