--- a/SoK.html
+++ b/SoK.html
@@ -13,6 +13,10 @@
 	</head>
 	<body class="is-preload">
 
+			<div class="topnav">
+				<a class="active" href="index.html">Home</a>
+			</div>
+		
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
@@ -24,8 +28,6 @@
 
 		<!-- Main -->
 			<div id="main">
-<!-- 				<a href="index.html"><button>Home</button></a>
-				-->
 					<section id="one">
 						<header class="major">
 							<h2>Settlers Off Katan</h2>
