--- a/SoK.html
+++ b/SoK.html
@@ -54,6 +54,10 @@
 						</iframe> 
 
 					</section>
+				<section>
+					<h1>GitHub Link</h1>
+					<h3><a href="https://github.com/Natives-of-Katan/Settlers-Off-Katan">Settlers Off Katan</a></h3>
+				</section>
 
 				<!-- Three -->
 					<section id="three">
