--- a/index.html
+++ b/index.html
@@ -134,11 +134,13 @@
 				<div class="inner">
 					<ul style="flex-wrap:wrap"class="actions small" style="max-width:100%">
 						<li><a href="#" class="button primary fit small">Java</a></li>
+						<li><a href="#" class="button primary fit small">C</a></li>
+						<li><a href="#" class="button primary fit small">Azure</a></li>
 						<li><a href="#" class="button primary fit small">HTML5/CSS</a></li>
 						<li><a href="#" class="button primary fit small">JavaScript</a></li>
 						<li><a href="#" class="button primary fit small">Python</a></li>
 						<li><a href="#" class="button primary fit small">Git</a></li>
-						<li><a href="#" class="button primary fit small">SQL</a></li>
+						<li><a href="#" class="button primary fit small">MSSQL</a></li>
 						<li><a href="#" class="button primary fit small">GCP</a></li>
 						<li><a href="#" class="button primary fit small">MERN Stack</a></li>
 						<li><a href="#" class="button primary fit small">Communication</a></li>
